@@ -97,6 +97,9 @@
           (http://www.packetfence.org/mantis/view.php?id=421)
         _cleanup functions should log number of deleted items
           (http://www.packetfence.org/mantis/view.php?id=422)
+        node expire function should log number of expired
+          nodes
+          (http://www.packetfence.org/mantis/view.php?id=423)
 
 1.7.3
         not all port security traps are handled
